Added Math Library

--- a/Math Library/Math Library/Math Library.vcxproj
+++ b/Math Library/Math Library/Math Library.vcxproj
@@ -20,6 +20,10 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Src\Application.cpp" />
+    <ClCompile Include="Src\Mathf.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Src\Mathf.hpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
